Soporte a doble MotorSencha

--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,8 @@
     <title>Sencha Touch in Action CH2 app</title>
     <link rel="stylesheet" href="lib/sencha-touch.css" type="text/css">
     <link rel="stylesheet" href="lib/touch-charts-demo.css"   type="text/css">
-    <style type="text/css">
-      .x-legend-button{
-      display:none;
-      }
-    </style>
   </head>
-  <body>
+  <body  style="background-color: transparent;">
     <script type="text/javascript" src="lib/sencha-touch.js"></script>
     <script type="text/javascript" src="lib/touch-charts.js"></script>
     <script type="text/javascript" src="NativeBridge.js"></script>
